--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -328,25 +328,21 @@
 
 {Anrede}
 
-heute wende ich mich an Sie mit einem Thema, das für viele Bürgerinnen, Bürger und Unternehmen in Ihrem Wahlkreis sehr relevant ist: Die Fortsetzung der Energiewende.
-
-Bürgerinnen und Bürger, Unternehmen und Kommunen investieren mit Photovoltaik und Speicher in die Energiewende und den Klimaschutz. Die so produzierte Energie nutzen sie zu einem guten Teil selbst. Sie sparen damit Stromkosten und tragen zu unseren Klimazielen bei. 
-
-Doch jetzt ist diese erfolgreiche Entwicklung bedroht. Bundesministerin Reiche möchte die Energiewende drosseln, die feste Einspeisevergütung abschaffen und neue Erdgaskraftwerke bauen. Außerdem bereitet die Bundesnetzagentur mit ihrem Diskussionspapier AgNes eine massive Verschlechterung der Wirtschaftlichkeit für Produzenten von erneuerbarem Strom vor. 
-
-Deshalb möchte ich Sie für die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“ gewinnen, die die deutschen Stromkunden und das Klima entlasten: 
-
-1. Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
-
-2. Ausbau Erneuerbarer beschleunigen – und netzdienliche Erzeugung belohnen.
-
-3. Feste Einspeisevergütung beibehalten bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.
-
-4. Bestandsschutz und keine Zusatzbelastung für erneuerbare Stromerzeugung.
-
-Dieser Brief entstand mit der Aktion „Sonnenstrom statt Erdgasstrom“. Weitere Informationen zu den Plänen von Frau Reiche und der BNetzA finden Sie auf https://www.aktionsolarstrom.de.
-
-Vielen Dank für Ihre Aufmerksamkeit. Es würde mich sehr freuen, von Ihnen zu hören.
+ich wende mich an Sie als Bürger bzw. Bürgerin Ihres Wahlkreises mit einem Anliegen, das viele Menschen und Betriebe vor Ort betrifft: die Zukunft der Energiewende.
+Bundesministerin Reiche plant, den Ausbau der Erneuerbaren zu drosseln, die feste Einspeisevergütung abzuschaffen und stattdessen neue Erdgaskraftwerke zu bauen. Gleichzeitig bereitet die Bundesnetzagentur mit ihrem Diskussionspapier AgNes neue Belastungen für Erzeuger von erneuerbarem Strom vor.
+Zusätzlich sieht das geplante Netzpaket Maßnahmen vor, die Investitionen in Solar- und Windanlagen massiv erschweren würden. Bürgerinnen und Bürger würden geplante Solaranlagen nicht mehr bauen, Unternehmen würden Investitionen verschieben, und zahlreiche Handwerksbetriebe im Solarbereich verlören ihre Aufträge.
+Deshalb unterstütze ich die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“, die Bürger, Wirtschaft und Klima entlasten:
+1.	Den bisherigen Entwurf des Netzpakets zurückziehen, weil er Investitionen in erneuerbare Energien massiv gefährdet.
+2.	Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
+3.	Ausbau der Erneuerbaren beschleunigen statt durch neue Hürden auszubremsen.
+4.	Feste Einspeisevergütung beibehalten, bis Smart Meter flächendeckend flexible Vergütungen ermöglichen.
+5.	Bestandsschutz und keine Zusatzbelastungen für erneuerbare Stromerzeugung.
+6.	
+Ich bitte Sie, sich im Bundestag dafür einzusetzen, dass die Energiewende nicht ausgebremst, sondern weiter vorangebracht wird.
+Dieser Brief entstand im Rahmen der Aktion „Sonnenstrom statt Erdgasstrom“.
+Weitere Informationen finden Sie unter:
+www.aktionsolarstrom.de
+Vielen Dank für Ihre Aufmerksamkeit. Über eine Rückmeldung würde ich mich sehr freuen.
 
 Mit freundlichen Grüßen
 
@@ -833,3 +829,4 @@ Mit freundlichen Grüßen
 </body>
 </html>
       
+
