--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -300,11 +300,11 @@ Bundesministerin Reiche plant, den Ausbau der Erneuerbaren zu drosseln, die fest
 Zusätzlich sieht das geplante Netzpaket Maßnahmen vor, die Investitionen in Solar- und Windanlagen massiv erschweren würden. Bürgerinnen und Bürger würden geplante Solaranlagen nicht mehr bauen, Unternehmen würden Investitionen verschieben, und zahlreiche Handwerksbetriebe im Solarbereich verlören ihre Aufträge.
 
 Deshalb unterstütze ich die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“, die Bürger, Wirtschaft und Klima entlasten:
-•	Den bisherigen Entwurf des Netzpakets zurückziehen, weil er Investitionen in erneuerbare Energien massiv gefährdet.
-•	Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
-•	Ausbau der Erneuerbaren beschleunigen statt durch neue Hürden auszubremsen.
-•	Feste Einspeisevergütung beibehalten, bis Smart Meter flächendeckend flexible Vergütungen ermöglichen.
-•	Bestandsschutz und keine Zusatzbelastungen für erneuerbare Stromerzeugung.
+1. Den bisherigen Entwurf des Netzpakets zurückziehen, weil er Investitionen in erneuerbare Energien massiv gefährdet.
+2. Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
+3. Ausbau der Erneuerbaren beschleunigen statt durch neue Hürden auszubremsen.
+4. Feste Einspeisevergütung beibehalten, bis Smart Meter flächendeckend flexible Vergütungen ermöglichen.
+5. Bestandsschutz und keine Zusatzbelastungen für erneuerbare Stromerzeugung.
 
 Ich bitte Sie, sich im Bundestag dafür einzusetzen, dass die Energiewende nicht ausgebremst, sondern weiter vorangebracht wird.
 Dieser Brief entstand im Rahmen der Aktion „Sonnenstrom statt Erdgasstrom“.
@@ -768,6 +768,7 @@ Mit freundlichen Grüßen
 </body>
 </html>
       
+
 
 
 
