Test: indexneu.html

--- a/indexneu.html
+++ b/indexneu.html
@@ -593,6 +593,9 @@
         </div>
       </section>
 
+<!-- === Aktuell: Atombombe auf die Energiewende (Lazy YouTube) === -->
+<section class="card" style="border-left:6px solid #0a7d32; padding:22px 22px; background:#f9fafb; border-radius:16px; box-shadow:0 3px 12px rgba(0,0,0,.06);">
+  <h2 style="margin-top:0;">Jetzt ansehen: Atombombe auf die Energiewende</h2>
 
 <div style="font-size:1rem; line-height:1.75;">
   <p style="margin:0 0 12px;">
@@ -640,34 +643,42 @@
   </p>
 </div>
 
-  <!-- Lazy-YouTube: lädt erst beim Klick -->
+    <!-- Lazy-YouTube: lädt erst beim Klick -->
   <div class="video-wrap yt-lazy"
-       data-ytid="fAngG96dN3w"
+       data-ytid="yHW1pEmknsk"
        aria-label="YouTube: Atombombe auf die Energiewende – Klick zum Abspielen">
-    <button class="yt-play" type="button" aria-label="Video abspielen: Atombombe auf die Energiewende">
+    <button class="yt-play" type="button" aria-label="Video abspielen">
       <span class="yt-badge">LMdE TV</span>
-      <img src="https://i.ytimg.com/vi/fAngG96dN3w/hqdefault.jpg"
-           loading="lazy" decoding="async"
+
+      <img src="https://i.ytimg.com/vi/yHW1pEmknsk/hqdefault.jpg"
+           loading="lazy"
+           decoding="async"
            alt="Vorschaubild – Atombombe auf die Energiewende">
+
       <span class="yt-icon" aria-hidden="true"></span>
       <div class="yt-caption">🎥 Jetzt ansehen auf YouTube</div>
     </button>
 
     <noscript>
-      <p style="margin-top:10px;">
-        <a class="cta secondary" href="https://youtu.be/fAngG96dN3w?si=fk_R0SoDEDkATox1" target="_blank" rel="noopener">
+      <p style="margin:10px 0 0;">
+        <a class="cta secondary"
+           href="https://youtu.be/yHW1pEmknsk?si=nZHnSk83hMzFXsYw"
+           target="_blank" rel="noopener">
           Video auf YouTube öffnen
         </a>
       </p>
     </noscript>
   </div>
 
-  <p style="margin-top:10px;">
-    <a class="cta secondary" href="https://youtu.be/fAngG96dN3w?si=fk_R0SoDEDkATox1" target="_blank" rel="noopener">
+  <p style="margin-top:10px">
+    <a class="cta secondary"
+       href="https://youtu.be/yHW1pEmknsk?si=nZHnSk83hMzFXsYw"
+       target="_blank" rel="noopener">
       Auf YouTube ansehen
     </a>
   </p>
 </section>
+<!-- === /AKTUELL === -->
 
 
       <!-- === /RÜCKBLICK === -->
